--- a/templates/index.html
+++ b/templates/index.html
@@ -37,6 +37,7 @@
         /* Estilo para el footer */
         footer {
             margin-top: auto; /* Asegura que el footer esté siempre al final de la página */
+            background-color:  #047cfc  !important;
         }
     </style>
 </head>
@@ -65,7 +66,7 @@
     </div>
 
     <!-- Footer de la página -->
-    <footer class="bg-primary text-white text-center py-3">
+    <footer class="text-white text-center py-3">
         <!-- Información del copyright -->
         <p>&copy; 2024 Productos PowerUP. Todos los derechos reservados.</p>
         <!-- Información del desarrollador -->
