--- a/templates/ingresar_prod.html
+++ b/templates/ingresar_prod.html
@@ -1,35 +1,47 @@
+<!-- Declaración del tipo de documento HTML -->
 <!DOCTYPE html>
 <html lang="es">
 <head>
+    <!-- Definición de la codificación de caracteres -->
     <meta charset="UTF-8">
+    <!-- Configuración de la vista para que sea responsiva -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ingresar Producto</title>
+    <!-- Compatibilidad con Internet Explorer -->
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <!-- Título de la página -->
+    <title>Product App</title>
+    <!-- Enlace a la hoja de estilo de Bootstrap desde Bootswatch -->
     <link rel="stylesheet" href="https://bootswatch.com/4/flatly/bootstrap.min.css">
+    <!-- Enlace a la hoja de estilo personalizada -->
     <link rel="stylesheet" href="/static/styles.css">
+    <!-- Enlace a la librería de iconos Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
+    <!-- Barra de navegación con título -->
     <nav class="navbar navbar-dark bg-primary">
         <h4 class="navbar-brand">Productos PowerUP</h4>
-    </nav>
+    </nav>    
 
     <div class="container">
         <div class="row first-row">
             <div class="col-md-6">
+                <!-- Tarjeta para añadir un producto -->
                 <div class="card text-white bg-secondary mt-4" style="max-width: 20rem;">
                     <div class="card-header">
-                        <h4>Añadir Producto</h4>
+                        <h4>Añade Producto</h4>
                     </div>
                     <div class="card-body">
+                        <!-- Formulario para registrar un nuevo producto -->
                         <form id="productForm" method="post" action="/register_product">
                             <div class="form-group">
                                 <input type="text" id="productName" class="form-control" placeholder="Nombre de Producto" name="nom_prod">
                             </div>
                             <div class="form-group">
-                                <input type="text" id="productCatg" class="form-control" placeholder="Categoría" name="catg_prod">
+                                <input type="text" id="productCatg" class="form-control" placeholder="Categoría del producto" name="catg_prod">
                             </div>
                             <div class="form-group">
-                                <input type="number" id="productPrice" class="form-control" step="0.01" placeholder="Precio" name="precio_prod">
+                                <input type="number" id="productPrice" class="form-control" step="0.01" placeholder="Precio del producto" name="precio_prod" autocomplete="off">
                             </div>
                             <div class="form-group">
                                 <input type="submit" class="btn btn-primary btn-lg btn-block" value="Grabar">
@@ -38,17 +50,20 @@
                     </div>
                 </div>
             </div>
-
             <div id="productList" class="col-md-6"></div>
         </div>
 
         <div class="section mt-4">
-            <h2>Listado de Productos</h2>
+            <h2>Listado</h2>
+
+            <!-- Mensaje de éxito al eliminar producto -->
             {% if successDelete %}
             <div class="alert alert-success">
                 {{ successDelete }}
             </div>
             {% endif %}
+
+            <!-- Tabla que muestra los productos -->
             <table id="productos-tabla">
                 <thead>
                     <tr>
@@ -60,6 +75,7 @@
                     </tr>
                 </thead>
                 <tbody>
+                    <!-- Iteración sobre los productos para mostrarlos en la tabla -->
                     {% for producto in productos %}
                     <tr>
                         <td>{{ producto.id_producto }}</td>
@@ -67,10 +83,12 @@
                         <td>{{ producto.catg_prod }}</td>
                         <td>{{ producto.precio_prod }}</td>
                         <td>
-                            <a class="btn-danger delete-btn" type="button" data-id="{{ producto.id_producto }}">
+                            <!-- Botón para eliminar producto -->
+                            <a class="btn-danger delete-btn" type="button" style="cursor: pointer;" data-id="{{ producto.id_producto }}">
                                 <i class="fa-solid fa-trash" style="color: #ffffff;"></i>
                             </a>
-                            <a class="btn-primary edit-btn" data-id="{{ producto.id_producto }}" data-nom="{{ producto.nom_prod }}" data-catg="{{ producto.catg_prod }}" data-precio="{{ producto.precio_prod }}">
+                            <!-- Botón para editar producto -->
+                            <a data-id="{{ producto.id_producto }}" data-nom="{{ producto.nom_prod }}" data-catg="{{ producto.catg_prod }}" data-precio="{{ producto.precio_prod }}" type="button" style="background-color: rgb(13, 77, 255);" class="btn-primary edit-btn">
                                 <i class="fa-solid fa-pencil"></i>
                             </a>
                         </td>
@@ -78,14 +96,163 @@
                     {% endfor %}
                 </tbody>
             </table>
+
+            <!-- Modal de confirmación de eliminación -->
+            <div id="infoModal" class="modal hidden">
+                <div class="modal-content">
+                    <span id="closeBtn" style="cursor: pointer;" class="close">&times;</span>
+                    <h2 id="modalTitle">Confirmar eliminación</h2>
+                    <p id="modalText">¿Estás seguro de que deseas eliminar el producto <span id="modalProductName"></span> con ID <span id="modalProductId"></span>?</p>
+                    <button id="confirmDeleteBtn" class="btn-danger mt-3">Confirmar</button>
+                    <button id="closeBtn2" class="btn-secondary mt-3">Cancelar</button>
+                </div>
+            </div>
+
+            <!-- Modal de edición de producto -->
+            <div id="editModal" class="modal hidden">
+                <div class="modal-content">
+                    <span id="closeEditBtn" style="cursor: pointer;" class="close">&times;</span>
+                    <h2>Editar Producto</h2>
+                    <form id="editProductForm">
+                        <div class="form-group">
+                            <input type="text" id="editProductName" class="form-control" placeholder="Nombre de Producto" name="nom_prod" required>
+                        </div>
+                        <div class="form-group">
+                            <input type="text" id="editProductCatg" class="form-control" placeholder="Categoría del Producto" name="catg_prod" required>
+                        </div>
+                        <div class="form-group">
+                            <input type="number" id="editProductPrice" class="form-control" step="0.01" placeholder="Precio del Producto" name="precio_prod" required>
+                        </div>
+                        <input type="hidden" id="editProductId" name="id_producto">
+                        <button type="submit" id="confirmEditBtn" class="btn btn-primary">Guardar cambios</button>
+                    </form>
+                </div>
+            </div>
         </div>
     </div>
 
+    <!-- Pie de página -->
     <footer class="bg-primary text-white text-center py-3 mt-4">
         <p>&copy; 2024 Productos PowerUP. Todos los derechos reservados.</p>
         <p>Desarrollado por Victor Mario Rios Giraldo</p>
     </footer>
 
+    <!-- Carga del archivo JavaScript -->
     <script src="script.js"></script>
+    <script>
+        // Modal de eliminación
+        const openModal = (id, nombre) => {
+            const modal = document.getElementById('infoModal');
+            const modalProductName = document.getElementById('modalProductName');
+            const modalProductId = document.getElementById('modalProductId');
+            const confirmDeleteBtn = document.getElementById('confirmDeleteBtn');
+
+            modalProductName.textContent = nombre;
+            modalProductId.textContent = id;
+
+            confirmDeleteBtn.onclick = () => deleteProduct(id);
+
+            modal.style.display = 'block';
+        };
+
+        const deleteProduct = (id) => {
+            fetch(`/deleteProduct?id_producto=${id}`, {
+                method: 'DELETE',
+            })
+            .then(response => {
+               if (response.ok) {
+                  location.reload();
+               }
+            });
+        };
+
+        document.querySelectorAll('.delete-btn').forEach(button => {
+            button.addEventListener('click', () => {
+                const id = button.getAttribute('data-id');
+                const nombre = button.closest('tr').querySelector('td:nth-child(2)').textContent;
+                openModal(id, nombre);
+            });
+        });
+
+        // Modal de edición
+        const openEditModal = (id, nombre, categoria, precio) => {
+            const modal = document.getElementById('editModal');
+            const editProductName = document.getElementById('editProductName');
+            const editProductCatg = document.getElementById('editProductCatg');
+            const editProductPrice = document.getElementById('editProductPrice');
+            const editProductId = document.getElementById('editProductId');
+            const confirmEditBtn = document.getElementById('confirmDeleteBtn');
+
+
+            editProductName.value = nombre;
+            editProductCatg.value = categoria;
+            editProductPrice.value = precio;
+            editProductId.value = id;
+
+            confirmEditBtn.onclick = () => editProduct(id);
+
+            modal.style.display = 'block';
+        };
+
+        // Recoger los productos en la tabla y asignar el evento de edición
+    document.querySelectorAll('.edit-btn').forEach(button => {
+        button.addEventListener('click', () => {
+            const id = button.getAttribute('data-id');
+            const nombre = button.getAttribute('data-nom');
+            const categoria = button.getAttribute('data-catg');
+            const precio = button.getAttribute('data-precio');
+
+            // Llamar a la función de abrir modal con los datos correctos
+            openEditModal(id, nombre, categoria, precio);
+        });
+    });
+
+    // Cerrar modal de edición
+    document.getElementById('closeEditBtn').addEventListener('click', () => {
+        document.getElementById('editModal').style.display = 'none';
+    });
+
+    // Enviar cambios del producto al backend
+    document.getElementById('editProductForm').addEventListener('submit', (event) => {
+        event.preventDefault();
+
+        const id = document.getElementById('editProductId').value; // Usar el id desde el formulario
+        const nombre = document.getElementById('editProductName').value;
+        const categoria = document.getElementById('editProductCatg').value;
+        const precio = document.getElementById('editProductPrice').value;
+
+        const formData = new FormData();
+        formData.append('id_producto', id); // enviar el id_producto
+        formData.append('nom_prod', nombre);
+        formData.append('catg_prod', categoria);
+        formData.append('precio_prod', precio);
+
+        // Aquí se envia a la ruta editProduct
+        fetch(`/editProduct?id_producto=${id}`, {
+            method: 'POST',
+            body: formData,
+        })
+        .then(response => {
+            if (response.ok) {
+                location.reload(); // Recargar la página después de la actualización
+            } else {
+                console.error('Error al editar el producto');
+            }
+        })
+        .catch(error => console.error('Error al enviar los datos:', error));
+    });
+
+        // Cerrar el modal si se hace clic fuera del contenido
+        window.addEventListener('click', (event) => {
+            const modal = document.getElementById('infoModal');
+            const editModal = document.getElementById('editModal');
+            if (event.target === modal) {
+                modal.style.display = 'none';
+            }
+            if (event.target === editModal) {
+                editModal.style.display = 'none';
+            }
+        });
+    </script>
 </body>
 </html>
